Derision: Added minlevel and maxlevel fields to tasks table and new quest function istaskappropriate(task).
Derision: All tasks in a TaskSet with a taskid of 0 as one of it's entries are now available to a player, subject to level restrictions.
Derision: (Spoon/Andmetal) Rez spells with effectdescnum != 82 or 39067 (6.2 spells_us) will give 100% Mana/HP restoration and no rez effects.

Required SQL: 
ALTER TABLE `tasks` ADD `minlevel` TINYINT UNSIGNED NOT NULL DEFAULT '0',
ADD `maxlevel` TINYINT UNSIGNED NOT NULL DEFAULT '0';

==10/03/2008
Congdar: Add EQOffline Bot Source
Derision: Removed 'stepped' column from task table. See http://eqemulator.net/forums/showthread.php?p=157613
Derision: Added display of Task Description to #task show to aid in debugging a reported problem.
Derision: Lowered default required status for #task command from 250 to 150 for debugging purposes.
KLS: Removed some lingering printf from the raid stuff.
KLS: Auto attack code changed to not use target, instead we save the first target and now always use that.
KLS: Hate list will no longer work for non ai controlloed player characters.
KLS: Fix to crash in monk special attack function.

Required SQL: ALTER TABLE `tasks` DROP `stepped` ;

==10/02/2008
KLS: (Congdar) Update to Tech. of Master Wu AA.
KLS: Revert of double attack change, people reporting non warriors were no longer double attacking properly.
KLS: Compile Warning in Database::GetZoneName()
KLS: Change to IsPlayerIllusionSpell() to make it more consistant, illusion spells can be more than 49 so we work off behavior and effect now.
KLS: Added AA__Message logs to project illusion code to try to track down an error.

==10/01/2008
Derision: (erde) VS2008 Compile Fix (#if (_MSC_VER < 1500) #define vsnprintf _vsnprintf #endif
Derision: Fix to stop zone crashing when looting PVPItem and PVPReward is set to 3.
cavedude00: Group members will no longer recieve a split when a player corpse is looted.

==9/30/2008